<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/alatsi"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/aquablue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:gravity="center"
        android:text="@string/tnc"
        android:textColorLink="@color/aquablue"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/reg_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/reg_user"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:fontFamily="@font/alatsi"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:fontFamily="@font/alatsi"
        android:hint="@string/emailhint"
        android:inputType="textPersonName"
        android:textColor="@color/grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_user" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:fontFamily="@font/alatsi"
        android:hint="@string/passhint"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <EditText
        android:id="@+id/reg_confirm"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:fontFamily="@font/alatsi"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass" />

    <EditText
        android:id="@+id/reg_mobile"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:fontFamily="@font/alatsi"
        android:hint="@string/mobile"
        android:inputType="textPersonName"
        android:textColor="@color/grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/regbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm" />


    <Button
        android:id="@+id/regbtn"
        android:layout_width="331sp"
        android:layout_height="52sp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:backgroundTint="@color/aquablue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_mobile" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="633dp"
        android:layout_height="634dp"
        android:layout_marginBottom="-270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_footer" />

</androidx.constraintlayout.widget.ConstraintLayout>